feat(orchestrator): Add stubs for orchestrator
